# mosaic_builder

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mosaic.toml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
mosaic_builder/: __init__.py  cli.py  collection.py  config.py  image_stats.py  modify.py  show.py
mosaic_builder/index/: __init__.py  base.py  bruteforce.py  build_index.py  factory.py  faiss_backend.py  hnsw_backend.py  kdtree.py
mosaic_builder/pipeline/: build_mosaic.py  ingest.py
mosaic_builder/stores/: __init__.py  factory.py  sql_store.py
src/mosaic_builder/: cli.py  color.py  features.py  indexer.py  matcher.py  pipeline.py  renderer.py  tiler.py
tests/: artifacts.py  conftest.py  test_cli_smoke.py  test_collection.py  test_color_practical.py  test_diversity_practical.py  test_features_features.py  test_image_stats.py  test_index.py  test_indexer_practical.py  test_matcher_practical.py  test_pipeline_e2e.py  test_renderer_practical.py  test_tiler_practical.py  utils.py  vis.py
