[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic-builder"
version = "0.1.0"
description = "A python library for reading photos and building mosaics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26", # explicit, even if pulled by others
  "pillow>=11.0.0",
  "scipy>=1.13.0", # for scipy.spatial.cKDTree
  "typer>=0.16.1",
]

[project.optional-dependencies]
# Choose ONE of these when you actually need Lab/ΔE:
color-skimage = ["scikit-image>=0.24"]     # rgb2lab + deltaE_ciede2000
color-colormath = ["colormath>=3.0.0"]     # per-color ΔE; slower for images

# ANN backends (opt-in). Split so users can pick.
ann-faiss = ["faiss-cpu>=1.7.4; platform_system != 'Windows'"]
ann-hnsw = ["hnswlib>=0.8.0"]

# Analytics / catalogs (opt-in)
analytics = [
  "duckdb>=1.0.0",
  "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://your-project-homepage-url.example.com"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["mosaic_builder/**", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.1",
  "black>=24.10.0",
  "ruff>=0.6.9",
  "pre-commit>=4.0.1",
  "mypy>=1.10.0",
  "pytest-sugar>=1.0.0",
  "isort>=6.0.0",
]
