[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaic-builder"
version = "0.1.2"
description = "A python library for reading photos and building mosaics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.5.1",
  "numpy>=1.26", # explicit, even if pulled by others
  "pillow>=11.0.0",
  "scikit-image>=0.25.2",
  "scipy>=1.13.0", # for scipy.spatial.cKDTree
  "typer>=0.16.1",
]

[project.optional-dependencies]
# ANN backends (opt-in). Split so users can pick.
ann-faiss = ["faiss-cpu>=1.7.4; platform_system != 'Windows'"]
ann-hnsw = ["hnswlib>=0.8.0"]

# Analytics / catalogs (opt-in)
analytics = [
  "duckdb>=1.3",
  "pandas>=2.2.3",
]
debug = ["matplotlib>=3.9.0"]

[project.urls]
Homepage = "https://your-project-homepage-url.example.com"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["mosaic_builder/**", "README.md", "pyproject.toml"]

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.6.1",
  "black>=24.10.0",
  "ruff>=0.6.9",
  "pre-commit>=4.0.1",
  "mypy>=1.10.0",
  "pytest-sugar>=1.0.0",
  "isort>=6.0.0",
]
